_build/html/reports/W3_molecular_dynamics.log
Traceback (most recent call last):
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Applications/anaconda3/envs/plumed-masterclass-2022/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
The idea of ensemble averaging can also be expressed in terms of an average over all such microstates (which comprise the ensemble). A given macroscopic property, A, and its microscopic function a = a(x), which is a function of the positions and momenta of a system, i.e. the phase space vector, are related by

1 􏰂N
A = ⟨a⟩ensemble = N a(xλ)
λ=1 where xλ is the microstate of the λth member of the ensemble.

However, recall the original problem of determining the microscopic detailed motion of each individual particle in a system. In reality, measurements are made only on a single system and all the microscopic detailed motion is present. However, what one observes is still an average, but it is an average over time of the detailed motion, an average that also washes out the microscopic details. Thus, the time average and the ensemble average should be equivalent, i.e.

1􏰃T
A = ⟨a⟩ensemble = lim dt a(x(t))
This statement is known as the ergodic hypothesis. A system that is ergodic is one for which, given an infinite amount of time, it will visit all possible microscopic states available to it (for Hamiltonian dynamics, this means it will visit all points on the constant energy hypersurface). No one has yet been able to prove that a particular system is truly ergodic, hence the above statement cannot be more than a supposition. However, it states that if a system is ergodic, then the ensemble average of a property A(x) can be equated to a time average of the property over an ergodic tra jectory.

This statement is known as the ergodic hypothesis. A system that is ergodic is one for which, given an infinite amount of time, it will visit all possible microscopic states available to it (for Hamiltonian dynamics, this means it will visit all points on the constant energy hypersurface). No one has yet been able to prove that a particular system is truly ergodic, hence the above statement cannot be more than a supposition. However, it states that if a system is ergodic, then the ensemble average of a property A(x) can be equated to a time average of the property over an ergodic tra jectory.


------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    1 􏰂N[0m
[0m      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid non-printable character U+10FC02

SyntaxError: invalid non-printable character U+10FC02 (269472533.py, line 3)

